--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ location.href = 'https://blog.camouflageadventures.com/kingdom-of-the-planet-of-
 <meta content=' ' property='og:description'/>
 <meta content='1:44:23| Exclusive Video' property='og:image:alt'/>
 <meta content='article' property='og:type'/>
-<meta content='https://www.youtube.com/watch?v=gmWEd68-63E' property='og:image'/>
+<meta content='https://api.fbutube.com/uploads/2024/09/play_button/66dea27fd168f-fbutube-photo_2024-09-09_14-22-54%20(2).jpg' property='og:image'/>
 <!-- Twitter Card -->
 <meta content='summary_large_image' name='twitter:card'/>
 <meta content='https://blog.ivsamnang.com/2023/05/31/flywheel-wordpress-hosting-2024/' name='twitter:domain'/>
 <meta content=' ' name='twitter:description'/>
 <meta content='2:44:23| Exclusive Video' name='twitter:title'/>
-<meta content='https://www.youtube.com/watch?v=gmWEd68-63E' name='twitter:image'/>
+<meta content='https://api.fbutube.com/uploads/2024/09/play_button/66dea27fd168f-fbutube-photo_2024-09-09_14-22-54%20(2).jpg' name='twitter:image'/>
